# fastapi-sqlalchemy2-alembic

./: .gitignore  README.md  pyproject.toml  server.py  views.py
alembic/: env.py
alembic/versions/: 468200e69c78_add_flags_for_todos.py  49b2c0d9074e_add_todos.py
apps/: main.py  settings.py
apps/todos/: apis.py  models.py  schemas.py
core/: db.py  inertia.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/layouts/: Layout.svelte
frontend/src/pages/: Index.svelte
frontend/src/queries/: todos.ts
templates/: base.html
